<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Nimbus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Credit">Weather information provided by World Weather Online</string>
    <string name="Prefs">Preferences</string>
    <string name="save">Save Preferences</string>
    <string name="saveButton">buttonSave</string>
    <string name="ProfileInstructions">Create a new profile or select one from the list</string>
    <string name="profieName">Profile Name</string>
    <string name="umbrella">Umbrella</string>
    <string name="coat">Coat</string>
    <string name="sunScreen">Sunscreen</string>
    <string name="snow">Snow</string>
    <string name="profiles">Create Profile</string>
    <string name="percent">As a percentage</string>
    <string name="degrees"> In degrees Fahrenheit</string>
    <string name="celsius"> Use degrees celsius</string>
</resources>
